aya-parser/src/parser/instructions/snapshots/aya_parser__parser__instructions__mov__tests__mov_mem_reg.snap
---
source: aya-parser/src/parser/instructions/mov.rs
expression: result
---
Instruction(
    MovMemReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Address(
            ByteOffset {
                start: 11,
                end: 15,
            },
        ),
    ),
)
